[package]
name = "groan"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
async-openai = "0.23.3"
clap = { version = "4.5.9", features = ["derive", "env"] }
serde = { version = "1.0.204", features = ["derive"] }
log = "0.4"
pretty_env_logger = "0.5.0"
serde_json = "1.0.117"
bytes = "1.6.0"