[package]
name = "groan"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.23.4"
base64 = "0.22.1"
bytes = { version = "1.7.1", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive", "env"] }
image = { version = "0.25.2", features = ["bmp", "png"] }
log = "0.4"
ocrs = "0.8.0"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
warp = "0.3"

[build-dependencies]
npm_rs = "1.0.0"
